[package]
name = "irodori-extension-oracle"
version = "0.1.0"
edition = "2021"
license = "MIT OR 0BSD"
description = "Irodori Table native connector extension."
repository = "https://github.com/hjosugi/irodori-extension-oracle"
readme = "README.md"
include = [
  "Cargo.toml",
  "Cargo.lock",
  "README.md",
  "LICENSE-*",
  "connector.config.json",
  "connector.source.json",
  "irodori.extension.json",
  "src/**",
  "native/source/**",
]

[lib]
name = "irodori_extension_oracle"
crate-type = ["cdylib", "rlib"]

[dependencies]
oracle-rs = "0.1.7"
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }

[profile.dev.package."*"]
debug = 0

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
